--- a/projects/CaliforniaNews/app/sass/pages/faq.sass
+++ b/projects/CaliforniaNews/app/sass/pages/faq.sass
@@ -1,6 +1,6 @@
 .content--faq
   width: 900px
-  margin: 0 auto 493px auto
+  margin: 0 auto
   .accord--item
     .open--accord-item
       display: flex
