--- a/projects/CaliforniaNews/app/templates/account.jade
+++ b/projects/CaliforniaNews/app/templates/account.jade
@@ -18,7 +18,7 @@ mixin notes(heading, date, heading2, heading3, paragraph1, paragraph2, paragraph
 block content
     main
         + contentTitle("Account")
-        div.content.content--account
+        div.content--account
             div.content--account-profile
                 h1 Your profile
                 fieldset.content--account-email
