--- a/projects/CaliforniaNews/app/templates/faq.jade
+++ b/projects/CaliforniaNews/app/templates/faq.jade
@@ -21,7 +21,7 @@ mixin accordeon (headingH1, heading2, paragraph, heading3, paragraph2)
 block content
     main
         + contentTitle("Faq", "You don't need be a designer. We've developed a wide range of blocks. Contemporary look and high flexibility makes them handy and applicable for any kind of content.")
-        div.content.content--faq
+        div.content--faq
             + accordeon('Installation instruction', "Automated installation", "Installation is free, quick, and easy. Install Jetpack from our site in minutes.", "Manual alternatives", "Alternatively, install Jetpack via the plugin directory, or upload the files manually to your server and follow the on-screen instructions. If you need additional help read our detailed instructions.")
             + accordeon('Is Jetpack Free?', "Automated installation", "Installation is free, quick, and easy. Install Jetpack from our site in minutes.", "Manual alternatives", "Alternatively, install Jetpack via the plugin directory, or upload the files manually to your server and follow the on-screen instructions. If you need additional help read our detailed instructions.")
             + accordeon('Should I purchase a paid plan?', "Automated installation", "Installation is free, quick, and easy. Install Jetpack from our site in minutes.", "Manual alternatives", "Alternatively, install Jetpack via the plugin directory, or upload the files manually to your server and follow the on-screen instructions. If you need additional help read our detailed instructions.")
