--- a/projects/CaliforniaNews/app/templates/features.jade
+++ b/projects/CaliforniaNews/app/templates/features.jade
@@ -16,7 +16,7 @@ mixin features (h1, h2, image)
 block content
     main
         + contentTitle("Features", "You don't need be a designer. We've developed a wide range of blocks. Contemporary look and high flexibility makes them handy and applicable for any kind of content.")
-        div.content
+        div.content.content-features-page
             div.fetures
                 + features("Fast", "We have already selected the best templates and plug-ins for you", "bird")
                 + features("Simple", "Just choose the right ones for you", "wind")
