--- a/projects/CaliforniaNews/app/templates/index.jade
+++ b/projects/CaliforniaNews/app/templates/index.jade
@@ -23,7 +23,7 @@ block content
                     a(href="/steps.html").blueBtn + Create a webite
                     a(href="#features").howItWorks How it works
 
-        div.content
+        div.content.content-features
             div.fetures#features
                 h1.features--heading Features
                 + features("Fast", "We have already selected the best templates and plug-ins for you", "bird")
