--- a/projects/CaliforniaNews/app/sass/header.sass
+++ b/projects/CaliforniaNews/app/sass/header.sass
@@ -80,7 +80,20 @@ header
     opacity: 1
     transform: rotate(0deg)
     transition: .25s ease
+    &:nth-child(1)
+      transform-origin: left center
     &:nth-child(2)
       margin-top: 4px
+      transform-origin: left center
     &:nth-child(3)
       margin-top: 4px
+      transform-origin: left center
+.hamburger.open span:nth-child(1)
+    transform: rotate(45deg)
+.hamburger.open span:nth-child(2)
+    width: 0
+    opacity: 0
+.hamburger.open span:nth-child(3)
+    transform: rotate(-45deg)
+    margin-top: 5px
+
