--- a/projects/CaliforniaNews/app/sass/pages/steps.sass
+++ b/projects/CaliforniaNews/app/sass/pages/steps.sass
@@ -26,6 +26,8 @@
     margin-bottom: 104px
     text-align: center
     transition: .4s ease
+    @include imgGrid(4, 4%)
+    width: 240px
     //height: 415px
     &:hover
       .cover--image
@@ -125,6 +127,8 @@
     display: flex
     justify-content: space-between
     flex-wrap: wrap
+    .main--plugins-list
+      @include imgGrid(4, 0%)
     .category--title
       position: relative
       display: flex
