--- a/projects/CaliforniaNews/app/templates/about.jade
+++ b/projects/CaliforniaNews/app/templates/about.jade
@@ -18,5 +18,5 @@ mixin notes(heading, date, heading2, heading3, paragraph1, paragraph2, paragraph
 block content
     main
         + contentTitle("About")
-        div.content.content--about
+        div.content--about
             + notes("Third note", "April 13, 2017", "Text block", "Text block", "This software is still in development, so we don’t recommend you run it on a production site. Consider setting up a test site just to play with the new version. To test WordPress 4.8, try the WordPress Beta Tester plugin (you’ll want “bleeding edge nightlies”). Or you can download the beta here (zip).", "For more information on what’s new in 4.8, check out the Beta 1 blog post. Since then, we’ve made over 50 changes in Beta 2.", "Do you speak a language other than English? Help us translate WordPress into more than 100 languages!")
