--- a/projects/CaliforniaNews/app/templates/_layout.jade
+++ b/projects/CaliforniaNews/app/templates/_layout.jade
@@ -15,7 +15,7 @@ html(lang="en")
             block content
             include _footer
             div.small--modal-wrapper
-                h1 Rest Password
+                h1 Reset Password
                 fieldset.content--account-reset
                     label(for="email") Email
                     input(type="text" name="email" value="test@mail.com" id="email" readonly)
@@ -23,6 +23,32 @@ html(lang="en")
                         a.iremember--account(href="#") No, I remembered
                 div.send-link
                     a.blueBtn(href="#") Get link
+            div.big--modal-themes
+                h1 Daily Insight
+                div.modal--author
+                    span by Yam Chhetri
+                    span Theme Homepage
+                div.modal--info
+                    p Daily Insight is a news and magazine WordPress free theme which can transform your blog into a modern online magazine which is best suited for dynamic news websites or professional blogs about technology, science, gadgets or anything else you can imagine. It comes with a wide variety of options so you can modify Styling, Featured Slider, Menus, Widgets and much more, directly from theme customizer. This theme is translation ready and woocommerce ready.
+                a.blueBtn.select--theme-btn(href="#") Select template
+                div.modal--images
+                    div.modal--images-desk
+                        img(src="images/modal-themes/bigModal.jpg" alt="Modal-img 1")
+                    div.modal--images-mob
+                        img(src="images/modal-themes/smallModal.jpg" alt="Modal-img 2")
+            div.big--modal-plugins
+                div.modal--plugins-info
+                    h1 Jetpack
+                    h2 Description
+                    div.modal--plugins-desk
+                        p Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum.
+                div.modal--plugins-image
+                    h2 Screenshot
+                    img(src="images/modal-plugins/jetpack.jpg" alt="Modal-img 2")
 
-        script(src="/js/vendor.min.js")
-        script(src="/js/main.min.js")
+
+
+        script(src="js/vendor.min.js")
+        script(src="js/bootstrap.min.js")
+        script(src="js/jquery.bootstrap.wizard.min.js")
+        script(src="js/main.min.js")
