--- a/projects/CaliforniaNews/app/sass/pages/steps.sass
+++ b/projects/CaliforniaNews/app/sass/pages/steps.sass
@@ -16,7 +16,7 @@
     font-size: 46px
     text-transform: uppercase
     margin-bottom: 12px
-    span
+    .step--count
       color: #3399ff
   p
     font-size: 14px
@@ -272,7 +272,7 @@
     width: 100%
     height: 526px
     background-color: #fff
-    z-index: 2
+    z-index: 0
     position: absolute
     top: 342px
 .line--holder
