--- a/projects/CaliforniaNews/app/templates/index.jade
+++ b/projects/CaliforniaNews/app/templates/index.jade
@@ -26,7 +26,8 @@ block content
         div.content.content-features
             div.fetures#features
                 h1.features--heading Features
-                + features("Fast", "We have already selected the best templates and plug-ins for you", "bird")
-                + features("Simple", "Just choose the right ones for you", "wind")
-                + features("Flexible", "A set of templates covers all media options, from a blog to an information portal", "modules")
-                + features("Free", "We don’t have any hidden fees. You create completely your site and just use it", "baloon")
+                div
+                    + features("Fast", "We have already selected the best templates and plug-ins for you", "bird")
+                    + features("Simple", "Just choose the right ones for you", "wind")
+                    + features("Flexible", "A set of templates covers all media options, from a blog to an information portal", "modules")
+                    + features("Free", "We don’t have any hidden fees. You create completely your site and just use it", "baloon")
