--- a/projects/CaliforniaNews/app/css/content.css
+++ b/projects/CaliforniaNews/app/css/content.css
@@ -379,7 +379,6 @@ main {
   -webkit-transform: none;
       -ms-transform: none;
           transform: none;
-  opacity: 1;
   -webkit-box-shadow: 0 70px 80px rgba(0, 0, 0, 0.3);
           box-shadow: 0 70px 80px rgba(0, 0, 0, 0.3); }
 
@@ -550,7 +549,7 @@ main {
             margin-top: 0; } }
 
 @media (min-width: 980px) and (max-width: 1209px) {
-  header nav {
+  header {
     -webkit-box-orient: vertical;
     -webkit-box-direction: normal;
     -webkit-flex-direction: column;
@@ -560,8 +559,8 @@ main {
     -webkit-align-items: center;
         -ms-flex-align: center;
             align-items: center; }
-  header .brand--logo {
-    margin-bottom: 20px; }
+    header .brand--logo {
+      margin-bottom: 20px; }
   main .jumbotron-wrapper {
     width: 100%;
     margin: 0;
@@ -591,8 +590,7 @@ main {
   .content--tehemes {
     margin: 0 auto !important; }
   .hamburger {
-    display: block;
-    margin-top: -2px; }
+    display: block; }
   .content--title {
     width: 100%; }
   header {
@@ -669,7 +667,7 @@ main {
   main .jumbotron-wrapper {
     width: 100%;
     margin: 0;
-    height: auto !important;
+    height: auto;
     margin-top: 73px;
     padding: 0 30px; }
     main .jumbotron-wrapper .jumbo--info {
@@ -711,10 +709,6 @@ main {
         margin: 12px auto 0 auto; }
         main .main--plugins-list .category--list .category--item:first-child {
           margin-top: 0; }
-        main .main--plugins-list .category--list .category--item .popup--item {
-          opacity: 1; }
-          main .main--plugins-list .category--list .category--item .popup--item .popup {
-            display: none; }
   .content--login {
     margin-top: 64px !important; }
   .content-finish .finish--img {
@@ -740,43 +734,8 @@ main {
         margin: 0 !important; } }
 
 @media (max-width: 768px) {
-  .big--modal-themes, .big--modal-plugins {
-    width: 80%;
-    margin-bottom: 300px; }
-  .hamburger {
-    display: block;
-    margin-top: -2px; }
-  .popup--help-wrap.help--active {
-    bottom: 92px; }
   header {
-    position: relative;
-    padding: 24px 24px 0; }
-    header .logo {
-      position: absolute;
-      left: 0;
-      top: 5px;
-      margin: 0; }
-      header .logo span:first-child {
-        margin: 0; }
-    header .brand--logo {
-      z-index: 3; }
-      header .brand--logo .califWrapper {
-        display: block !important;
-        position: relative;
-        width: 96px; }
-        header .brand--logo .califWrapper .califo {
-          font-size: 12px;
-          float: left;
-          margin-left: 30px; }
-        header .brand--logo .califWrapper .inter {
-          font-size: 12px;
-          -webkit-box-orient: vertical;
-          -webkit-box-direction: normal;
-          -webkit-flex-direction: column;
-              -ms-flex-direction: column;
-                  flex-direction: column;
-          float: left;
-          margin-left: 30px; }
+    position: relative; }
     header .navigation {
       position: absolute;
       -webkit-box-orient: vertical;
@@ -784,14 +743,15 @@ main {
       -webkit-flex-direction: column;
           -ms-flex-direction: column;
               flex-direction: column;
-      width: 100%;
-      height: 100vh;
-      left: 0;
-      top: 0;
+      height: auto;
+      right: 16px;
+      top: 24px;
       background-color: #fff;
       padding: 84px 42px 72px 42px;
       border: 1px solid #F2F2F2;
       z-index: 2;
+      max-width: 320px;
+      height: auto;
       visibility: hidden;
       opacity: 0;
       -webkit-border-radius: 100px;
@@ -844,322 +804,7 @@ main {
                   border-radius: 20px;
           text-align: center;
           -webkit-box-shadow: 0 16px 40px rgba(0, 0, 0, 0.1);
-                  box-shadow: 0 16px 40px rgba(0, 0, 0, 0.1); }
-  main {
-    width: 100%;
-    margin: 0;
-    padding-top: 40px;
-    padding-bottom: 80px; }
-    main .jumbotron-wrapper {
-      width: 100%;
-      margin: 0;
-      padding: 0 24px;
-      -webkit-box-orient: vertical;
-      -webkit-box-direction: normal;
-      -webkit-flex-direction: column;
-          -ms-flex-direction: column;
-              flex-direction: column; }
-      main .jumbotron-wrapper .jumbo--images {
-        width: 500px;
-        margin: 0 auto; }
-        main .jumbotron-wrapper .jumbo--images .small--frame {
-          width: 100px;
-          left: 0;
-          top: 165px; }
-      main .jumbotron-wrapper .jumbo--info {
-        margin: 74px auto 0 auto;
-        text-align: center; }
-    main .content-features {
-      margin-top: 163px !important;
-      padding: 0 20px; }
-    main .content {
-      width: 100%; }
-      main .content .features {
-        width: 100%; }
-        main .content .features .features--heading {
-          font-size: 26px; }
-      main .content .feature--item {
-        -webkit-box-orient: vertical !important;
-        -webkit-box-direction: reverse !important;
-        -webkit-flex-direction: column-reverse !important;
-            -ms-flex-direction: column-reverse !important;
-                flex-direction: column-reverse !important;
-        text-align: center;
-        margin-bottom: 0 !important; }
-        main .content .feature--item .feture--image {
-          margin: 0 auto 19px auto; }
-        main .content .feature--item .feture--info {
-          width: 75%; }
-    main .steps--container {
-      width: 100%;
-      padding: 0 20px; }
-      main .steps--container h1 {
-        font-size: 36px; }
-      main .steps--container p {
-        display: none; }
-    main .content--tehemes {
-      padding: 0 20px; }
-      main .content--tehemes .theme--form {
-        width: 100%;
-        -webkit-box-pack: center;
-        -webkit-justify-content: center;
-            -ms-flex-pack: center;
-                justify-content: center; }
-      main .content--tehemes .theme--card {
-        width: 240px;
-        margin-right: 6% !important;
-        margin-bottom: 0 !important; }
-        main .content--tehemes .theme--card p {
-          display: none; }
-        main .content--tehemes .theme--card .select--theme {
-          opacity: 1;
-          visibility: visible;
-          -webkit-transform: none;
-              -ms-transform: none;
-                  transform: none; }
-        main .content--tehemes .theme--card:nth-child(2n) {
-          margin-right: 0 !important; }
-        main .content--tehemes .theme--card:hover .cover--image {
-          -webkit-transform: none;
-              -ms-transform: none;
-                  transform: none;
-          margin-bottom: 32px; }
-          main .content--tehemes .theme--card:hover .cover--image:after {
-            display: none; }
-        main .content--tehemes .theme--card:hover .select--theme {
-          -webkit-transform: none;
-              -ms-transform: none;
-                  transform: none; }
-        main .content--tehemes .theme--card:hover h2 {
-          -webkit-transform: none;
-              -ms-transform: none;
-                  transform: none; }
-        main .content--tehemes .theme--card:hover .blueBtn {
-          margin-top: 16px; }
-        main .content--tehemes .theme--card .cover--image {
-          opacity: 1; }
-          main .content--tehemes .theme--card .cover--image:after {
-            display: none; }
-    main .content--plugins {
-      width: 100%;
-      padding: 0 24px; }
-      main .content--plugins .plugins--category {
-        width: 100%;
-        -webkit-box-orient: vertical;
-        -webkit-box-direction: normal;
-        -webkit-flex-direction: column;
-            -ms-flex-direction: column;
-                flex-direction: column;
-        -webkit-box-align: center;
-        -webkit-align-items: center;
-            -ms-flex-align: center;
-                align-items: center; }
-        main .content--plugins .plugins--category .main--plugins-list {
-          margin: 0;
-          width: 400px; }
-          main .content--plugins .plugins--category .main--plugins-list .category--item {
-            width: 100%; }
-            main .content--plugins .plugins--category .main--plugins-list .category--item .popup--item {
-              opacity: 1; }
-              main .content--plugins .plugins--category .main--plugins-list .category--item .popup--item .popup {
-                display: none; }
-    main .content--login {
-      width: 100%;
-      padding: 0 24px;
-      margin-bottom: 0; }
-      main .content--login .login--container {
-        border: none;
-        padding-bottom: 0;
-        width: 100%; }
-    main .content-finish {
-      width: 100%;
-      margin-bottom: 160px; }
-      main .content-finish .finish--img {
-        width: 500px; }
-      main .content-finish .arrow--line {
-        width: 100%; }
-        main .content-finish .arrow--line .line--holder {
-          width: 100%; }
-        main .content-finish .arrow--line img {
-          width: 100%; }
-      main .content-finish .finsh--info {
-        width: 100%;
-        height: auto; }
-  footer {
-    margin-top: 0 !important; }
-    footer .footer--main {
-      display: none; } }
-
-@media (max-width: 567px) {
-  .big--modal-themes, .big--modal-plugins {
-    padding: 20px; }
-    .big--modal-themes h1, .big--modal-plugins h1 {
-      font-size: 26px;
-      text-align: center; }
-    .big--modal-themes .modal--author, .big--modal-plugins .modal--author {
-      margin: 8px auto 0 auto;
-      text-align: center; }
-      .big--modal-themes .modal--author span, .big--modal-plugins .modal--author span {
-        font-size: 14px; }
-  .big--modal-plugins {
-    padding: 0; }
-    .big--modal-plugins .modal--plugins-info {
-      padding: 20px; }
-      .big--modal-plugins .modal--plugins-info h2 {
-        text-align: center;
-        font-size: 26px; }
-    .big--modal-plugins .modal--plugins-image h2 {
-      padding: 0 0 16px 0;
-      text-align: center; }
-  main .steps--container .mobile--steps {
-    display: none;
-    color: #4F4F4F;
-    font-weight: normal;
-    font-size: 14px; }
-    main .steps--container .mobile--steps.active {
-      display: block;
-      color: #4F4F4F !important; }
-  main .progress--bar {
-    display: none; }
-  main .content--tehemes {
-    padding: 0 20px; }
-    main .content--tehemes .theme--form {
-      width: 100%;
-      -webkit-box-orient: vertical;
-      -webkit-box-direction: normal;
-      -webkit-flex-direction: column;
-          -ms-flex-direction: column;
-              flex-direction: column; }
-    main .content--tehemes .theme--card {
-      width: 240px;
-      margin: 0 auto !important; }
-      main .content--tehemes .theme--card:nth-child(2n) {
-        margin: 0 auto !important; } }
-
-@media (max-width: 540px) {
-  main .jumbotron-wrapper .jumbo--images {
-    width: 400px; }
-    main .jumbotron-wrapper .jumbo--images .small--frame {
-      width: 100px;
-      left: 0;
-      top: 140px; }
-  main .jumbo--info {
-    margin: 74px auto 0 auto;
-    text-align: center;
-    width: 100%; }
-    main .jumbo--info h1 {
-      font-size: 36px; }
-    main .jumbo--info .jumbo--info-buttons {
-      display: -webkit-box;
-      display: -webkit-flex;
-      display: -ms-flexbox;
-      display: flex;
-      -webkit-box-orient: vertical;
-      -webkit-box-direction: normal;
-      -webkit-flex-direction: column;
-          -ms-flex-direction: column;
-              flex-direction: column; }
-      main .jumbo--info .jumbo--info-buttons .blueBtn {
-        display: block;
-        width: 272px;
-        margin: 0 auto 24px auto; }
-  main .content .feature--item .feture--info {
-    width: 90%; }
-  main .content--plugins .plugins--category .main--plugins-list {
-    margin: 0;
-    width: 272px; }
-  main .content--login {
-    margin-top: 0 !important; }
-    main .content--login .login--container {
-      padding: 0 !important;
-      width: 272px; }
-      main .content--login .login--container h2 {
-        padding: 0 50px; }
-      main .content--login .login--container .form--group {
-        -webkit-box-orient: vertical;
-        -webkit-box-direction: normal;
-        -webkit-flex-direction: column;
-            -ms-flex-direction: column;
-                flex-direction: column; }
-        main .content--login .login--container .form--group .form--set:last-child {
-          margin-left: 0 !important;
-          margin-top: 20px; }
-  main .content-finish .finish--img {
-    width: 272px; }
-  main .content-finish .arrow--line {
-    width: 100%;
-    top: 140px; }
-    main .content-finish .arrow--line .line--holder {
-      width: 100%; }
-    main .content-finish .arrow--line img {
-      width: 100%; }
-  main .content-finish .finsh--info {
-    width: 100%;
-    height: auto;
-    top: 170px; } }
-
-@media (max-width: 440px) {
-  header .navigation {
-    padding: 84px 24px 0 24px; }
-  main .jumbotron-wrapper {
-    height: auto; }
-    main .jumbotron-wrapper .jumbo--images {
-      width: 272px; }
-      main .jumbotron-wrapper .jumbo--images .small--frame {
-        width: 53px;
-        left: 0;
-        top: 91px; }
-  main .jumbo--info {
-    margin: 48px auto 0 auto !important;
-    text-align: center;
-    width: 100%; }
-    main .jumbo--info h1 {
-      font-size: 26px; }
-    main .jumbo--info .jumbo--info-buttons {
-      display: -webkit-box;
-      display: -webkit-flex;
-      display: -ms-flexbox;
-      display: flex;
-      -webkit-box-orient: vertical;
-      -webkit-box-direction: normal;
-      -webkit-flex-direction: column;
-          -ms-flex-direction: column;
-              flex-direction: column; }
-      main .jumbo--info .jumbo--info-buttons .blueBtn {
-        display: block;
-        width: 272px;
-        margin: 0 auto 24px auto; }
-  main .content .feature--item .feture--info {
-    width: 100%; }
-    main .content .feature--item .feture--info h1 {
-      font-size: 26px; }
-    main .content .feature--item .feture--info h2 {
-      font-size: 16px;
-      line-height: 20px; }
-  main .content-features {
-    margin-top: 40px !important; }
-  main .features--heading {
-    font-size: 26px !important; }
-  footer .footer--bottom {
-    padding: 0 24px 24px 24px; }
-    footer .footer--bottom .footer--bottom-copy p {
-      font-size: 12px; } }
-
-@media (max-width: 440px) {
-  main .content-finish {
-    margin-bottom: 230px; }
-    main .content-finish .finsh--info {
-      padding: 0 24px; }
-      main .content-finish .finsh--info .finsh--info-content {
-        width: 100%;
-        margin: 0; }
-        main .content-finish .finsh--info .finsh--info-content h1 {
-          font-size: 26px; }
-    main .content-finish .arrow--line {
-      width: 100%;
-      top: 140px; }
-      main .content-finish .arrow--line img {
-        width: 50%; } }
+                  box-shadow: 0 16px 40px rgba(0, 0, 0, 0.1); } }
 
 @media (min-width: 1600px) {
   main .jumbotron-wrapper {
