--- a/projects/CaliforniaNews/app/css/footer.css
+++ b/projects/CaliforniaNews/app/css/footer.css
@@ -1,7 +1,6 @@
 footer {
   margin-top: 300px;
-  position: relative;
-  z-index: 30; }
+  position: relative; }
 
 .footer--main {
   background-color: #F7FBFF;
