--- a/projects/CaliforniaNews/app/css/header.css
+++ b/projects/CaliforniaNews/app/css/header.css
@@ -18,6 +18,10 @@ header {
     text-transform: uppercase;
     font-weight: bold;
     font-size: 30px;
+    display: -webkit-box;
+    display: -webkit-flex;
+    display: -ms-flexbox;
+    display: flex;
     -webkit-transition: .2s ease;
     -o-transition: .2s ease;
     transition: .2s ease; }
@@ -26,32 +30,13 @@ header {
       -o-transition: .2s ease;
       transition: .2s ease;
       width: 100% !important; }
-    header .brand--logo a .califWrapper {
-      display: -webkit-box;
-      display: -webkit-flex;
-      display: -ms-flexbox;
-      display: flex; }
-    header .brand--logo a .califo {
-      -webkit-box-ordinal-group: 2;
-      -webkit-order: 1;
-          -ms-flex-order: 1;
-              order: 1; }
-    header .brand--logo a .inter {
-      -webkit-box-ordinal-group: 4;
-      -webkit-order: 3;
-          -ms-flex-order: 3;
-              order: 3; }
   header .logo {
     width: 20px;
     height: 27px;
     margin: 4px 8px 0;
     -webkit-transition: .4s ease;
     -o-transition: .4s ease;
-    transition: .4s ease;
-    -webkit-box-ordinal-group: 3;
-    -webkit-order: 2;
-        -ms-flex-order: 2;
-            order: 2; }
+    transition: .4s ease; }
     header .logo span {
       height: 4px;
       width: 100%;
