--- a/projects/CaliforniaNews/app/sass/pages/steps.sass
+++ b/projects/CaliforniaNews/app/sass/pages/steps.sass
@@ -21,6 +21,8 @@
   p
     font-size: 14px
     font-weight: normal
+  .mobile--steps
+    display: none
 
 .content--tehemes
   width: 100%
@@ -77,9 +79,13 @@
       transition: .4s ease
       opacity: .6
       position: relative
+      height: 340px
       img
         border-radius: 4px
         display: block
+        width: 100%
+        height: 100%
+        object-fit: cover
       &::after
         content: ''
         width: 160px
@@ -110,8 +116,19 @@
     width: 200px
     margin: 0 auto
     text-align: center
+    .select-rec
+      cursor: pointer
+    &.recom--deactive
+      span
+        color: #BDBDBD
+        &:before
+          background-color: #BDBDBD
+        &:after
+          background-color: #BDBDBD
+          left: -35px
     span
       position: relative
+      transition: .3s ease
       &:before
         content: ''
         width: 20px
@@ -126,9 +143,10 @@
         height: 8px
         border-radius: 50%
         position: absolute
-        top: 33%
+        top: 28%
         background-color: #3399ff
         left: -15px
+        transition: .3s ease
   .plugins--category
     margin-top: 40px
     display: flex
@@ -311,7 +329,10 @@
   width: 770px
   margin: 0 auto
   z-index: 1
-  box-shadow: 0px 70px 80px rgba(0, 0, 0, 0.3)
+  transition: .4s ease
+  transition-delay: .3s
+  transform: translateY(313px)
+  opacity: 0
   img
     display: block
     width: 100%
