--- a/projects/CaliforniaNews/app/sass/pages/steps.sass
+++ b/projects/CaliforniaNews/app/sass/pages/steps.sass
@@ -18,9 +18,12 @@
     margin-bottom: 12px
     .step--count
       color: #3399ff
-  p
+  .step--title
     font-size: 14px
     font-weight: normal
+    display: none
+    &.active-title
+      display: block
   .mobile--steps
     display: none
 
