--- a/projects/CaliforniaNews/app/templates/steps.jade
+++ b/projects/CaliforniaNews/app/templates/steps.jade
@@ -38,7 +38,10 @@ block content
     main
         div.steps--container
             h1 Step 1 of 4
-            p You don't need be a designer. We've developed a wide range of blocks. Contemporary look and high flexibility makes them handy and applicable for any kind of content.
+            p.step--title.active-title We have identified the seven best templates for media sites from the WordPress template store for you. Choose how your new site will look like.
+            p.step--title Here is a set of the most necessary plug-ins for media sites created on WordPress. Choose the right one for you.
+            p.step--title Please log in to manage the created sites or be able to connect with us.
+            p.step--title Download the archive with your site and a set of plug-ins on your computer. Further instructions will tell you what to do next.
             span.mobile--steps.active Choose a template
             span.mobile--steps Select Plugins
             span.mobile--steps Authorization
