--- a/projects/CaliforniaNews/app/sass/pages/account.sass
+++ b/projects/CaliforniaNews/app/sass/pages/account.sass
@@ -46,7 +46,6 @@
       transform: translateY(-100px)
       transition: .4s ease
     .content--account-save
-      //display: none
       visibility: hidden
       opacity: 0
       display: flex
@@ -63,12 +62,14 @@
       width: 100%
       display: flex
       justify-content: space-between
+      flex-wrap: wrap
       margin-top: 24px
       .theme
         width: 240px
         height: 340px
         border: 1px dashed #E5E5E5
         border-radius: 4px
+        margin-bottom: 30px
 
 .content--account-reset
   border: none
